--- a/pom.xml
+++ b/pom.xml
@@ -2389,10 +2389,16 @@ under the License.
 								<exclude>org.apache.flink.configuration.Configuration#getBytes(java.lang.String,byte[])</exclude>
 								<exclude>org.apache.flink.configuration.Configuration#setBytes(java.lang.String,byte[])</exclude>
 								<!-- Disable check for two sink methods. -->
-								<!-- TypeSerializer needs to be considered upgraded to Public. Tracked under FLINK-35566 -->
 								<exclude>org.apache.flink.api.connector.sink2.WriterInitContext#createInputSerializer()</exclude>
 								<!-- SinkV1 is deprecated but relies on an Experimental interface. Keeping this for legacy purposes  -->
 								<exclude>org.apache.flink.api.connector.sink2.WriterInitContext#metadataConsumer()</exclude>
+								<!-- TypeSerializer has been considered upgraded to Public. Tracked under FLINK-35566 -->
+								<exclude>
+									org.apache.flink.api.common.typeutils.TypeSerializerSchemaCompatibility
+								</exclude>
+								<exclude>
+									org.apache.flink.api.common.typeutils.TypeSerializerSnapshot#readVersionedSnapshot(org.apache.flink.core.memory.DataInputView,java.lang.ClassLoader)
+								</exclude>
 								<!-- MARKER: end exclusions -->
 							</excludes>
 							<accessModifier>public</accessModifier>
