--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
       max-parallel: 1
       matrix:
         branch:
-          - release-1.20
+          - test-doc
     steps:
       - uses: actions/checkout@v3
         with:
