--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,11 +27,7 @@ jobs:
       max-parallel: 1
       matrix:
         branch:
-          - master
-          - release-1.20
-          - release-1.19
-          - release-1.18
-          - release-1.17
+          - fix-npm-issue
     steps:
       - uses: actions/checkout@v3
         with:
